--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "lodash": "~3.2.0",
     "angular-moment": "~0.9.0",
     "angular-cache": "~3.2.5",
-    "angular-truncate": "*"
+    "angular-truncate": "*",
+    "donkeycode-ionic-tools": "*"
   },
   "resolutions": {
     "angular": "1.3.13"
