--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,12 @@
   },
   "resolutions": {
     "angular": "1.3.13"
+  },
+  "overrides": {
+    "ionic": {
+      "main": [
+        "js/ionic.bundle.js"
+      ]
+    }
   }
 }
