--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,14 @@
     "angular-truncate": "*",
     "donkeycode-ionic-tools": "*"
   },
+  "overrides": {
+    "ionic": {
+      "main": [
+        "js/ionic.js",
+        "js/ionic-angular.js"
+      ]
+    }
+  },
   "resolutions": {
     "angular": "1.3.13"
   }
