--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "wiredep": "^2.2.2"
   },
   "cordovaPlugins": [
-    "org.apache.cordova.network-information",
     "com.ionic.keyboard",
     "org.apache.cordova.console",
-    "org.apache.cordova.device",
-    "org.apache.cordova.inappbrowser"
+    "org.apache.cordova.inappbrowser",
+    "org.apache.cordova.device"
+  ],
+  "cordovaPlatforms": [
+    "ios"
   ]
 }
